# mini_game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
assets/: game-pad.aseprite
assets/fonts/: mini.txt
assets/images/: game-pad.aseprite  palette.gpl  skeleton-walk.aseprite
src/: Game.h  MainScene.h  MiniGameScene.h  SFX.h  assets.h  main.cpp
src/assets/: MusicData.h
src/core/: Audio.cpp  Audio.h  Collision.h  Draw.cpp  Draw.h  Entity.h  Font.h  FrameTime.h  GameWindow.h  Input.cpp  Input.h  Log.cpp  Log.h  Scene.cpp  Scene.h  SceneManager.h  Window.h  helpers.h  pocketmod_impl.c
toolchain/: .gitignore  shard.yml
toolchain/src/: export_song.cr  export_sprite.lua  pack_assets.cr
toolchain/src/export/: aseprite_to_bytes.lua  font.cr  image.cr  music.cr
